@@ -63,6 +63,7 @@ typedef enum {
   CS_SLES_GMRES,           /* Generalized minimal residual */
   CS_SLES_P_GAUSS_SEIDEL,  /* Process-local Gauss-Seidel */
   CS_SLES_PCR3,            /* 3-layer conjugate residual */
+  CS_SLES_IPCG,            /* Inexact preconditionned conjugate gradient */
   CS_SLES_N_IT_TYPES       /* Number of resolution algorithms */
 
 } cs_sles_it_type_t;
