@@ -5,6 +5,10 @@ Release 5.0.9 (unreleased)
 Bug fixes
 ---------
 
+- Fix for OpenMP multigrid-preconditioned Conjugate Gradient convergence issue.
+  This requires using a flexible variant of the Conjugate Gradient when
+  using a Gauss-Seidel smoother with multiple threads.
+
 - Fix spurious mapping of previous mass flux with order 1 in time scheme.
 
 - Fix pressure drop by zone computation (gravity term twice multiplied by
